[gd_scene load_steps=13 format=3 uid="uid://dh4s221kgtc83"]

[ext_resource type="Script" path="res://assets/scripts/player.gd" id="1_216rl"]
[ext_resource type="Texture2D" uid="uid://wo22c5ole6cp" path="res://assets/art/player.png" id="2_gif0e"]

[sub_resource type="Animation" id="Animation_1x17l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture:load_path")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["res://.godot/imported/player.png-c7d0a380c5da2a6bf92079bfaa99329e.ctex"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:frame_coords")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_bgkxj"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1), Vector2i(8, 1)]
}

[sub_resource type="Animation" id="Animation_6jait"]
resource_name = "walk_right"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0)]
}

[sub_resource type="Animation" id="Animation_j40lu"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6tx6x"]
_data = {
"RESET": SubResource("Animation_1x17l"),
"walk_down": SubResource("Animation_bgkxj"),
"walk_right": SubResource("Animation_6jait"),
"walk_up": SubResource("Animation_j40lu")
}

[sub_resource type="Animation" id="Animation_jkewm"]
resource_name = "RESET"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_lg0he"]
resource_name = "smoll"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_id0dm"]
_data = {
"RESET": SubResource("Animation_jkewm"),
"smoll": SubResource("Animation_lg0he")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qgisa"]
size = Vector2(20.3333, 79.6667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dsr0b"]
size = Vector2(46.6667, 39.3333)

[node name="Player" type="CharacterBody2D"]
scale = Vector2(3, 3)
script = ExtResource("1_216rl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_gif0e")
hframes = 9
vframes = 3
frame = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_6tx6x")
}

[node name="DoorAnimation" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_id0dm")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1.83333, 1.5)
shape = SubResource("RectangleShape2D_qgisa")

[node name="AttackAreas" type="Node2D" parent="."]

[node name="Down" type="Area2D" parent="AttackAreas"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackAreas/Down"]
position = Vector2(0, 35.3333)
shape = SubResource("RectangleShape2D_dsr0b")
debug_color = Color(0.992157, 0.0862745, 0, 0.0784314)

[node name="Right" type="Area2D" parent="AttackAreas"]
position = Vector2(35, -39.3333)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackAreas/Right"]
position = Vector2(0, 35.3333)
shape = SubResource("RectangleShape2D_dsr0b")
debug_color = Color(0.992157, 0.0862745, 0, 0.0784314)

[node name="Left" type="Area2D" parent="AttackAreas"]
position = Vector2(-34.6667, -39.3333)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackAreas/Left"]
position = Vector2(0, 35.3333)
shape = SubResource("RectangleShape2D_dsr0b")
debug_color = Color(0.992157, 0.0862745, 0, 0.0784314)

[node name="Up" type="Area2D" parent="AttackAreas"]
position = Vector2(0.333333, -69.3333)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackAreas/Up"]
position = Vector2(0, 35.3333)
shape = SubResource("RectangleShape2D_dsr0b")
debug_color = Color(0.992157, 0.0862745, 0, 0.0784314)

[connection signal="area_entered" from="AttackAreas/Down" to="." method="_on_enemy_down_area_entered"]
[connection signal="area_exited" from="AttackAreas/Down" to="." method="_on_enemy_down_area_exited"]
[connection signal="area_entered" from="AttackAreas/Right" to="." method="_on_enemy_right_area_entered"]
[connection signal="area_exited" from="AttackAreas/Right" to="." method="_on_enemy_right_area_exited"]
[connection signal="area_entered" from="AttackAreas/Left" to="." method="_on_enemy_left_area_entered"]
[connection signal="area_exited" from="AttackAreas/Left" to="." method="_on_enemy_left_area_exited"]
[connection signal="area_entered" from="AttackAreas/Up" to="." method="_on_enemy_up_area_entered"]
[connection signal="area_exited" from="AttackAreas/Up" to="." method="_on_enemy_up_area_exited"]
